@@ -25,6 +25,7 @@ OpenLDAP 2.4.18 Engineering
 	Fixed slapd-relay response/cleanup callback mismatch (ITS#6154)
 	Fixed slapd-sql with baseObject query (ITS#6172)
 	Fixed slapd-sql with empty attribute (ITS#6163)
+	Fixed slapo-dynlist uninitialized var (ITS#6266)
 	Fixed slapo-pcache multiple enhancements (ITS#6152,ITS#5178)
 	Fixed slapo-ppolicy updating operational attributes (ITS#6265)
 	Fixed slapo-translucent attribute return (ITS#6254)
